# mxnet-mtcnn

./: .gitignore  CMakeLists.txt  README.md
include/: buffer_file.hpp  mtcnn.hpp  mxnet_mtcnn.hpp  utils.hpp
src/: CMakeLists.txt
src/libmtcnn/: CMakeLists.txt  mtcnn.cpp  mxnet_mtcnn.cpp  utils.cpp
src/main/: CMakeLists.txt  camera.cpp  test.cpp  test_camera.cpp  test_picture.cpp
